--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 			  </div>
         <div class="description">
 				  <p>The Alameda Naval Air Museum is home to a unique collection of artifacts and exhibits emphasizing the role of the Alameda Naval Air Station in the defense of our nation, and as an integral part of the local community for over 50 years.</p>
-				  <p>The museum has teamed up with <a href="http://www.arcadiapublishing.com/" target="_blank">Arcadia Publishing</a> to produce a book in their Images of America series titled "Alameda Naval Air Station 1940-1997" which was published in July 2010, and I was tasked with collecting and cataloging images for this project.</p>
-				  <p>Currently working on a migration from ASP.NET C# to WordPress with a custom theme.</p>
+				  <p>The museum has teamed up with <a href="https://www.arcadiapublishing.com/Products/9780738580401" target="_blank">Arcadia Publishing</a> to produce a book in their Images of America series titled "Alameda Naval Air Station" which was published in July 2010, and I was tasked with collecting and cataloging images for this project.</p>
+				  <p>Recently completed a migration from ASP.NET C# to WordPress with a custom theme.</p>
         </div>
       </article>
       <article>
