--- a/index.html
+++ b/index.html
@@ -3,13 +3,17 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	< META http-equiv="refresh" content="5;URL=http://alamedanavalairmuseum.org">
 	<meta name="description" content="David Balmer - Web Developer - Portfolio and Projects">
 	<meta name="keywords" content="ASP.NET, C#, SQL Server, jQuery, Angular, Bootstrap, Grunt, Node, Git, VSS, QUnit, Karma, Jasmine, Web Developer, WordPress, WordPress Theme Developer">
 	<title>David Balmer - Web Developer - Projects and Portfolio</title>
+	
   <link rel="stylesheet" href="styles/reset.css">
   <link rel="stylesheet" href="styles/site.css">
 </head>
 <body>
+Redirecting to Alameda Naval Air Museum
+<!--
   <div id="container">
     <header>
 			<h1>David Balmer</h1>
@@ -107,5 +111,6 @@
     <footer>
     </footer>
   </div>
+-->
 </body>
 </html>
