--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	< META http-equiv="refresh" content="5;URL=http://alamedanavalairmuseum.org">
+	<meta http-equiv="refresh" content="5;URL=http://alamedanavalairmuseum.org">
 	<meta name="description" content="David Balmer - Web Developer - Portfolio and Projects">
 	<meta name="keywords" content="ASP.NET, C#, SQL Server, jQuery, Angular, Bootstrap, Grunt, Node, Git, VSS, QUnit, Karma, Jasmine, Web Developer, WordPress, WordPress Theme Developer">
 	<title>David Balmer - Web Developer - Projects and Portfolio</title>
